# unicoder

./: Cargo.toml  TODO
src/: encoding.rs  main.rs
src/encodings/: base64.rs  code_adapter.rs  cp437.rs  hex.rs  iso8859.rs  mod.rs  normalize.rs  null.rs  shift_jis.rs  tee.rs  u_code.rs  un_utf16.rs  un_utf8.rs  unicode.rs  unicode_info.rs  unutf8.rs  utf16.rs  utf7.rs  utf8.rs  utils.rs  windows1252.rs
