[package]
name = "unicoder"
version = "0.1.0"
authors = ["Bill Fraser <wfraser@codewise.org>"]
edition = "2018"

[dependencies]
log = { version = "0.4", features = ["std"] }
ucd = "0.1"
unicode-normalization = "0.1"

[dependencies.unicode_names]
# unicode_names is broken, this is a fixed and updated fork:
package = "unicode_names2"
version = "0.4.0"

[profile.release]
lto = true
